--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Mercedes-Benz</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+  <body>
+    <header>
+      <div class="navbar">
+        <div class="container flex">
+          <img src="./images/logo2 white.png" class="logo" alt="" />
+          <nav>
+            <ul>
+              <li><a href="index.html">Forside</a></li>
+              <li><a href="#">Koncept</a></li>
+              <li><a href="#">Design</a></li>
+              <li><a href="#">Leasing</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+<!--
+      <div class="video">
+        <iframe width="450" height="200" src="https://www.youtube.com/embed/QQ1Tod_OGgY?autoplay=1&mute=1">
+        </iframe>
+      </div>
+    -->
+      <div class="text-box">
+        <h4>Mercedes-AMG GT</h4>
+        <h1>
+          Lorem ipsum <br />
+          dolor sit.
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis
+          tempor <br />
+          felis, vel gravida lectus pretium sed. Aenean vitae vehicula.
+        </p>
 
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
-    <title>S/Leasing</title>
-</head>
+        <a href="#" class="btn-pre">PRE-ORDER NOW</a>
+        <a href="#" class="btn-test">TEST DRIVE</a>
+      </div>
+    </header>
 
-<body>
     
-</body>
-
+  </body>
 </html>
