--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-@ -0,0 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+
+    <link rel="stylesheet" href="normalize.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -11,7 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Mercedes-Benz</title>
+    <title>S/Leasing</title>
   </head>
 
   <body>
@@ -49,11 +53,10 @@
 
         <a href="#" class="btn-pre">PRE-ORDER NOW</a>
        <!-- <a href="#" class="btn-test">TEST DRIVE</a> -->
-      </div>
+      </div>    
     </header>
 
     <footer>
-
       <section class="services">
         <div class="container grid-3 center">
           <div>
@@ -73,14 +76,12 @@
           </div>
           <div>
             <i class="fab fa-youtube fa-3x"></i>
-            <h3>FYoutube</h3>
+            <h3>Youtube</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
         </div>
       </section>
-
     </footer>
 
-    
   </body>
 </html>
