--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li><a href="index.html">Forside</a></li>
               <li><a href="#">Koncept</a></li>
               <li><a href="#">Design</a></li>
-              <li><a href="#">Leasing</a></li>
+              <li><a href="leasing.html">Leasing</a></li>
             </ul>
           </nav>
         </div>
