Added Class to Leasing and Index, Adding CSS Stuff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>S/Leasing</title>
   </head>
 
-  <body>
+  <body class="body-index">
     <header>
       <div class="navbar">
         <div class="containers flex">
