--- a/leasing.html
+++ b/leasing.html
@@ -20,11 +20,13 @@
     <title>S/Leasing</title>
 </head>
 
-<body>
+<body class="body-leasing">
+
     <header>
         <div class="navbar">
           <div class="containers flex">
-            <img src="./images/logo2 white.png" class="logo" alt="" />
+            <a href="index.html">
+            <img src="./images/logo2 white.png" class="logo" alt="S/Leasing" /></a>
             <nav>
               <ul>
                 <li><a href="index.html">Forside</a></li>
@@ -36,5 +38,10 @@
           </div>
         </div>
     </header>
+
+    <main class="main-leasing">
+
+    </main>
+
 </body>
 </html>
