--- a/koncept.html
+++ b/koncept.html
@@ -9,23 +9,25 @@
     <link rel="stylesheet" href="style.css">
     <title>S/Leasing</title>
   </head>
-  <body>
-    <header>
-      <div class="navbar">
-        <div class="containers flex">
-          <img src="./images/logo2 white.png" class="logo" alt="" />
-          <nav>
-            <ul>
+  <body class="page_id_2">
+    <Section class="p_2_nav">
+      <header>
+        <div class="navbar">
+          <div class="containers flex">
+            <img src="./images/logo2 white.png" class="logo" alt="" />
+            <nav>
+             <ul>
               <li><a href="index.html">Forside</a></li>
-              <li><a href="#">Koncept</a></li>
+              <li><a href="koncept.html">Koncept</a></li>
               <li><a href="#">Design</a></li>
               <li><a href="#">Leasing</a></li>
             </ul>
           </nav>
-        </div>
-      </div>
-    </header>
-    <section class="box1">  
+         </div>
+       </div>
+     </header>
+    </Section>
+    <section class="p_2_box1">  
     <h1 class="text">
         SLASH <br> - Bag Konceptet
     </h1>
@@ -44,7 +46,7 @@
       <a href="./leasing.html" class="btn-lease">LEASE NU</a>
     </div>
   </section>
-  <section class="box2">
+  <section class="p_2_box2">
     <h3 class="text4">
       SLASH-modellen bygger på ideen om luksusbilers fængende exterior design: Smart og æstetisk. De indenvendige komponenter er dertil nøje udvalgt, så produktionsomkostningerne holdes nede i niveau. Netop derfor kan vi tilbyde en leasingpris der tiltaler de fleste, og som kun er tilgængelig for studerende. <br><br>
       En ting SLASH ikke går på kompromi med er lyd: Bilen er udstyret med Apple Carplay, så du nemt kan tilkoble iPhonen og afspille DIN musik.
