--- a/koncept.html
+++ b/koncept.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>S/Leasing</title>
   </head>
-  <body class="page_id_2">
-    <Section class="p_2_nav">
+  <body class="body-koncept">
       <header>
         <div class="navbar">
           <div class="containers flex">
@@ -26,15 +25,14 @@
          </div>
        </div>
      </header>
-    </Section>
-    <section class="p_2_box1">  
-    <h1 class="text">
+    <section class="p_2_box">  
+    <h1>
         SLASH <br> - Bag Konceptet
     </h1>
-    <h2 class="text2">
+    <h2>
         Lev dit bedste liv - NU
     </h2>
-    <h3 class="text3">
+    <h3>
       Vi tilbyder her en eksklusivt mulighed KUN for 
       studerende indmeldt på en dansk uddannelse. <br><br>
       Med denne unikke løsning, kan du udleve drømmen 
@@ -42,12 +40,7 @@
       - i din luksusbil - allerede fra imorgen. <br><br>
 
     </h3>
-    <div class="btn">
-      <a href="./leasing.html" class="btn-lease">LEASE NU</a>
-    </div>
-  </section>
-  <section class="p_2_box2">
-    <h3 class="text4">
+    <h3>
       SLASH-modellen bygger på ideen om luksusbilers fængende exterior design: Smart og æstetisk. De indenvendige komponenter er dertil nøje udvalgt, så produktionsomkostningerne holdes nede i niveau. Netop derfor kan vi tilbyde en leasingpris der tiltaler de fleste, og som kun er tilgængelig for studerende. <br><br>
       En ting SLASH ikke går på kompromi med er lyd: Bilen er udstyret med Apple Carplay, så du nemt kan tilkoble iPhonen og afspille DIN musik.
     </h3>
