--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <nav>
             <ul>
               <li><a href="index.html">Forside</a></li>
-              <li><a href="#">Koncept</a></li>
-              <li><a href="#">Design</a></li>
+              <li><a href="koncept.html">Forside</a></li>
+              <li><a href="design.html">Forside</a></li>
               <li><a href="leasing.html">Leasing</a></li>
             </ul>
           </nav>
