--- a/koncept.html
+++ b/koncept.html
@@ -17,9 +17,9 @@
             <nav>
              <ul>
               <li><a href="index.html">Forside</a></li>
-              <li><a href="koncept.html">Koncept</a></li>
-              <li><a href="#">Design</a></li>
-              <li><a href="#">Leasing</a></li>
+              <li><a href="koncept.html">Forside</a></li>
+              <li><a href="design.html">Forside</a></li>
+              <li><a href="leasing.html">Leasing</a></li>
             </ul>
           </nav>
          </div>
