--- a/leasing.html
+++ b/leasing.html
@@ -30,8 +30,8 @@
             <nav>
               <ul>
                 <li><a href="index.html">Forside</a></li>
-                <li><a href="koncept.html">Forside</a></li>
-                <li><a href="design.html">Forside</a></li>
+                <li><a href="koncept.html">Koncept</a></li>
+                <li><a href="design.html">Design</a></li>
                 <li><a href="leasing.html">Leasing</a></li>
               </ul>
             </nav>
