--- a/leasing.html
+++ b/leasing.html
@@ -42,8 +42,7 @@
     <main class="main-leasing">
         <div class="main-container">
             <div class="main-text-box">
-                <h4>
-                      LEASING</h4>
+                <h4>LEASING</h4>
                 <p>
                   Leasing af tilsvarende bil på normalt marked <br>
                   Engangsydelse fra <del>30.000 kr.</del> <br>
