--- a/leasing.html
+++ b/leasing.html
@@ -40,6 +40,9 @@
     </header>
 
     <main class="main-leasing">
+        <div class="main-img">
+            <img src="./images/car-reer.jpg" alt="">
+        </div>
         <div class="main-container">
             <div class="main-text-box">
                 <h4>LEASING</h4>
