Tilføjelse af billeder til design

--- a/design.html
+++ b/design.html
@@ -40,9 +40,9 @@
           <div class="text-box">
               <h2 style="text-align:center;">DESIGN</h2>
               <p style="color:#d5ffff; text-align:center;">SLASH kommer tonet og lakeret i den flotte Silver Clouds farve. Hjulkapslerne er Jet Ink Black. Disse kombinationer af farver passer perfekt til cruisen på landevej og i by-billedet. </p>
-              <img src="./images/yellow-mercedes.png" alt="Bilen" class="center"> 
+              <img src="./images/Bag-rattet-bil-fronten.png" alt="Bilen" class="center"> 
               <p style="color:#d5ffff; text-align:center;">Oplev den fede fornemmelse af SLASH's indenvendige komfort. Med nem adgang til Apple Carplay samt dæmpede diodelys i instrumentbrættet, formes stemningen på turen mod din destination. </p>
-              <img src="./images/mercedesfront2.jpg" alt="bilen foran" class="center">
+              <img src="./images/Driving Slash Car.png" alt="bilen foran" class="center">
               <p style="color:#d5ffff; text-align:center;">Siddekomfort i en klasse for sig selv. Perfekt til når en studiekammerat får et lift.</p>
               <img src="./images/mercedes-seats.png" alt="bilen bagfra" class="center">    
               <p style="color:#d5ffff;text-align:center;">Er du fristet?</p>
