--- a/leasing.html
+++ b/leasing.html
@@ -42,6 +42,7 @@
     <main class="main-leasing">
         <div class="main-container">
             <div class="main-text-box">
+                <img src="./images/car-reer.jpg" alt="No">
                 <h4>LEASING</h4>
                 <p>
                   Leasing af tilsvarende bil på normalt marked <br>
