--- a/koncept.html
+++ b/koncept.html
@@ -37,6 +37,7 @@
       - i din luksusbil - allerede fra imorgen. <br><br>
 
     </h4>
+    <img src="./images/car-bg-mobil2.jpg" class="koncept_pic">
     <h4>
       SLASH-modellen bygger på ideen om luksusbilers fængende exterior design: Smart og æstetisk. De indenvendige komponenter er dertil nøje udvalgt, så produktionsomkostningerne holdes nede i niveau. Netop derfor kan vi tilbyde en leasingpris der tiltaler de fleste, og som kun er tilgængelig for studerende. <br><br>
       En ting SLASH ikke går på kompromi med er lyd: Bilen er udstyret med Apple Carplay, så du nemt kan tilkoble iPhonen og afspille DIN musik.
