added Link to Design, Updated Leasing and CSS

--- a/design.html
+++ b/design.html
@@ -28,7 +28,7 @@
           <nav>
             <ul>
               <li><a href="index.html">Forside</a></li>
-              <li><a href="#">Koncept</a></li>
+              <li><a href="koncept.html">Koncept</a></li>
               <li><a href="design.html">Design</a></li>
               <li><a href="leasing.html">Leasing</a></li>
             </ul>
