--- a/leasing.html
+++ b/leasing.html
@@ -41,7 +41,7 @@
 
     <main class="main-leasing">
         <div class="main-img">
-            <img src="./images/car-reer.jpg" alt="">
+            <img src="./images/car-reer.jpg" alt="" height="500px">
         </div>
         <div class="main-container">
             <div class="main-text-box">
@@ -75,11 +75,11 @@
                   
                   <input type="email" placeholder="E-mail">
                 
-                </Section>
-
-                <div class="btn">
+                  <div class="btn">
                     <a href="./hovedside.html" class="btn-pre">indsend</a>
                 </div>
+
+                </Section>
 
                 <p class="kontakt2">
                   * Forudsat Bankgodkendelse
@@ -87,6 +87,29 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <section class="services">
+          <div class="container grid-3 center">
+            <div>
+              <i class="fab fa-facebook-f fa-3x"></i>
+              <h3>Facebook</h3>
+            </div>
+            <div>
+              <i class="fab fa-instagram fa-3x"></i>
+              <h3>Instagram</h3>
+            </div>
+            <div>
+              <i class="fab fa-twitter fa-3x"></i>
+              <h3>Twitter</h3>
+            </div>
+            <div>
+              <i class="fab fa-youtube fa-3x"></i>
+              <h3>Youtube</h3>
+            </div>
+          </div>
+        </section>
+      </footer>
 
 </body>
 </html>
