--- a/koncept.html
+++ b/koncept.html
@@ -35,13 +35,15 @@
       Med denne unikke løsning, kan du udleve drømmen 
       om at cruise gennem det danske landskab og bybillede 
       - i din luksusbil - allerede fra imorgen. <br><br>
-
+      SLASH-modellen bygger på ideen om luksusbilers fængende 
+      exterior design: Smart og æstetisk. De indenvendige 
+      komponenter er dertil nøje udvalgt, så produktionsomkostningerne 
+      holdes nede i niveau. Netop derfor kan vi tilbyde en leasingpris 
+      der tiltaler de fleste, og som kun er tilgængelig for studerende. <br><br>
+      En ting SLASH ikke går på kompromi med er lyd: Bilen er udstyret med Apple 
+      Carplay, så du nemt kan tilkoble iPhonen og afspille DIN musik.
     </h4>
-    <img src="./images/car-bg-mobil2.jpg" class="koncept_pic">
-    <h4>
-      SLASH-modellen bygger på ideen om luksusbilers fængende exterior design: Smart og æstetisk. De indenvendige komponenter er dertil nøje udvalgt, så produktionsomkostningerne holdes nede i niveau. Netop derfor kan vi tilbyde en leasingpris der tiltaler de fleste, og som kun er tilgængelig for studerende. <br><br>
-      En ting SLASH ikke går på kompromi med er lyd: Bilen er udstyret med Apple Carplay, så du nemt kan tilkoble iPhonen og afspille DIN musik.
-    </h4>
+    <img src="./images/koncept_car.png" class="koncept_pic">
     </section>
   </body>
 </html>
