--- a/design.html
+++ b/design.html
@@ -24,7 +24,7 @@
     <header>
       <div class="navbar">
         <div class="containers flex">
-          <img src="./images/logo2 white.png" class="logo" alt="" />
+          <img src="./images/logo2 white.png" class="logo" alt="S/Leasing">
           <nav>
             <ul>
               <li><a href="index.html">Forside</a></li>
