--- a/koncept.html
+++ b/koncept.html
@@ -27,7 +27,7 @@
      </header>
     <section class="p_2_box">  
     <h1>
-        SLASH <br> - Bag Konceptet
+        SLASH <br> /Bag Konceptet
     </h1>
     <h4>
       Vi tilbyder her en eksklusivt mulighed KUN for 
