design siden nu med grid

--- a/design.html
+++ b/design.html
@@ -35,17 +35,25 @@
           </nav>
         </div>
       </div>
-      <section>
-        <div class="container">
-          <div class="text-box">
-              <h2 style="color:#d5ffff; text-align:center;">DESIGN</h2>
+      <div class="grid-one">
+       <div> 
+        <img src="./images/Bag-rattet-bil-fronten.png" alt="Bilen" class="center">
+      </div>
+      <div >
+              <h1 style="color:#d5ffff; text-align:center;">DESIGN</h1>
               <p style="color:#d5ffff; text-align:center;">SLASH kommer tonet og lakeret i den flotte Silver Clouds farve. Hjulkapslerne er Jet Ink Black. Disse kombinationer af farver passer perfekt til cruisen på landevej og i by-billedet. </p>
-              <img src="./images/Bag-rattet-bil-fronten.png" alt="Bilen" class="center"> 
               <p style="color:#d5ffff; text-align:center;">Oplev den fede fornemmelse af SLASH's indenvendige komfort. Med nem adgang til Apple Carplay samt dæmpede diodelys i instrumentbrættet, formes stemningen på turen mod din destination. </p>
-              <img src="./images/Driving Slash Car.png" alt="bilen foran" class="center">
+      </div>
+
+      <div >
               <p style="color:#d5ffff; text-align:center;">Siddekomfort i en klasse for sig selv. Perfekt til når en studiekammerat får et lift.</p>
               <p style="color:#d5ffff;text-align:center;">Er du fristet?</p>
-  
+              
+      </div>
+      <div>
+                <img src="./images/Driving Slash Car.png" alt="bilen foran" class="center">
+      </div>
+    </div>
            <div class="btn">
            <a href="./leasing.html" class="btn-lease">lease nu</a>
             </div>
