Style + Leasing Update

--- a/leasing.html
+++ b/leasing.html
@@ -40,11 +40,11 @@
     </header>
 
     <main class="main-leasing">
-        <div class="main-img">
+        <div class="leasing-img">
             <img src="./images/car-reer.jpg" alt="" height="500px">
         </div>
-        <div class="main-container">
-            <div class="main-text-box">
+        <div class="leasing-container">
+            <div class="leasing-text-box">
                 <h4>LEASING</h4>
                 <p>
                   Leasing af tilsvarende bil på normalt marked <br>
@@ -75,7 +75,7 @@
                   
                   <input type="email" placeholder="E-mail">
                 
-                  <div class="btn">
+                  <div class="leasing-btn">
                     <a href="./hovedside.html" class="btn-pre">indsend</a>
                 </div>
 
@@ -88,7 +88,7 @@
         </div>
     </main>
 
-    <footer>
+    <!-- <footer>
         <section class="services">
           <div class="container grid-3 center">
             <div>
@@ -109,7 +109,7 @@
             </div>
           </div>
         </section>
-      </footer>
+      </footer> -->
 
 </body>
 </html>
