--- a/koncept.html
+++ b/koncept.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>S/Leasing</title>
+      <!-- Link til Icons -->
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
   </head>
   <body class="body-koncept">
       <header>
@@ -45,5 +52,28 @@
     </h4>
     <img src="./images/koncept_car.png" class="koncept_pic">
     </section>
+    <footer>
+      <section class="services">
+        <div class="container grid-3 center">
+          <div>
+            <i class="fab fa-facebook-f fa-3x"></i>
+            <h3>Facebook</h3>
+          </div>
+          <div>
+            <i class="fab fa-instagram fa-3x"></i>
+            <h3>Instagram</h3>
+          </div>
+          <div>
+            <i class="fab fa-twitter fa-3x"></i>
+            <h3>Twitter</h3>
+          </div>
+          <div>
+            <i class="fab fa-youtube fa-3x"></i>
+            <h3>Youtube</h3>
+          </div>
+        </div>
+      </section>
+    </footer>
+
   </body>
 </html>
