--- a/design.html
+++ b/design.html
@@ -37,7 +37,7 @@
       </div>
       <div class="grid-one">
        <div> 
-        <img src="./images/Bag-rattet-bil-fronten.png" alt="Bilen" class="center">
+        <img src="./images/Bag-rattet-bil-fronten.png" alt="Bilen" class="center" height="500px">
       </div>
       <div >
               <h1 style="color:#d5ffff; text-align:left;">DESIGN</h1>
@@ -51,7 +51,7 @@
               
       </div>
       <div>
-                <img src="./images/Driving Slash Car.png" alt="bilen foran" class="center">
+                <img src="./images/Driving Slash Car.jpg" alt="bilen foran" class="center" height="500px">
       </div>
     </div>
            <div class="btn">
