nye ændringer til forsiden
h

--- a/index.html
+++ b/index.html
@@ -35,26 +35,21 @@
         </div>
       </div>
 
-<!--
+
       <div class="video">
-        <iframe width="450" height="200" src="https://www.youtube.com/embed/QQ1Tod_OGgY?autoplay=1&mute=1">
+        <iframe width="450" height="250" src="https://www.youtube.com/embed/QQ1Tod_OGgY?autoplay=1&mute=1">
         </iframe>
       </div>
-    -->
+  
 
       <div class="text-box">
-        <h4>Mercedes-AMG GT</h4>
-        <h1>
-          Lorem ipsum <br />
-          dolor sit.
-        </h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur
-          tempor <br />
-          felis, vel gravida lectus pretium sed.
-        </p>
+        <h1>Slash </h1>
+        <h4> Skær prisen på ren luksus</h4>
+        <h2>
+          Lease en luksusbil med Studierabat
+        </h2>
 
-        <a href="#" class="btn-pre">PRE-ORDER NOW</a>
+        <a href="#" class="btn-pre">Pre-Order-Now</a>
        <!-- <a href="#" class="btn-test">TEST DRIVE</a> -->
       </div>    
     </header>
@@ -65,22 +60,18 @@
           <div>
             <i class="fab fa-facebook-f fa-3x"></i>
             <h3>Facebook</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
           <div>
             <i class="fab fa-instagram fa-3x"></i>
             <h3>Instagram</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
           <div>
             <i class="fab fa-twitter fa-3x"></i>
             <h3>Twitter</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
           <div>
             <i class="fab fa-youtube fa-3x"></i>
             <h3>Youtube</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
         </div>
       </section>
