--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           felis, vel gravida lectus pretium sed.
         </p>
 
-        <a href="#" class="btn-pre">PRE-ORDER NOW</a>
+        <a href="#" class="index-btn-pre">PRE-ORDER NOW</a>
        <!-- <a href="#" class="btn-test">TEST DRIVE</a> -->
       </div>    
     </header>
@@ -65,22 +65,18 @@
           <div>
             <i class="fab fa-facebook-f fa-3x"></i>
             <h3>Facebook</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
           <div>
             <i class="fab fa-instagram fa-3x"></i>
             <h3>Instagram</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
           <div>
             <i class="fab fa-twitter fa-3x"></i>
             <h3>Twitter</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
           <div>
             <i class="fab fa-youtube fa-3x"></i>
             <h3>Youtube</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
           </div>
         </div>
       </section>
