--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
       <section class="services">
         <div class="container grid-3 center">
           <div>
-            <i class="fab fa-facebook-f fa-3x"></i>
+           <a href="https://da-dk.facebook.com/" target="_blank"> <i class="fab fa-facebook-f fa-3x"></i></a>
             <h3>Facebook</h3>
           </div>
           <div>
-            <i class="fab fa-instagram fa-3x"></i>
+          <a href="https://www.instagram.com/"target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
             <h3>Instagram</h3>
           </div>
           <div>
-            <i class="fab fa-twitter fa-3x"></i>
+          <a href="https://twitter.com/?lang=da"target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
             <h3>Twitter</h3>
           </div>
           <div>
-            <i class="fab fa-youtube fa-3x"></i>
+          <a href="https://www.youtube.com/"target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
             <h3>Youtube</h3>
           </div>
         </div>
