style + leasing update

--- a/leasing.html
+++ b/leasing.html
@@ -40,19 +40,21 @@
     </header>
 
     <main class="main-leasing">
-        <div class="leasing-img">
-            <img src="./images/car-reer.jpg" alt="" height="440px">
+        <div class="leasing-container">
+          <div class="leasing-img">
+            <img src="./images/car-reer.jpg" alt="" height="440px" width="200px">
+          </div>
         </div>
         <div class="leasing-container">
           <div class="leasing-box">
-            <h3>TILBUD 1</h3>
-            <p>X Antal Måneders Leasing
+            <h3>SLASH Tilbud 1</h3>
+            <p>12 Måneders Leasing
               <br> 10000kr. + 3000kr
             </p>
           </div>
           <div class="leasing-box">
             <h3>TILBUD 2</h3>
-            <p>X Antal Måneders Leasing
+            <p>24 Måneders Leasing
               <br> 10000kr. + 3000kr
             </p>
           </div>
