--- a/design.html
+++ b/design.html
@@ -36,9 +36,10 @@
         </div>
       </div>
       <div class="grid-one">
-       <div> 
+        <div> 
         <img src="./images/Bag-rattet-bil-fronten.png" alt="Bilen" class="center" height="400px">
-      </div>
+        </div>
+
       <div >
               <h1 style="color:#d5ffff; text-align:left;">DESIGN</h1>
               <p style="color:#d5ffff; text-align:left;">SLASH kommer tonet og lakeret i den flotte Silver Clouds farve. Hjulkapslerne er Jet Ink Black. Disse kombinationer af farver passer perfekt til cruisen på landevej og i by-billedet. </p>
@@ -47,18 +48,13 @@
 
       <div >
               <p style="color:#d5ffff; text-align:left;">Oplev den fede fornemmelse af SLASH's indenvendige komfort. Med nem adgang til Apple Carplay samt dæmpede diodelys i instrumentbrættet, formes stemningen på turen mod din destination. <br>Siddekomfort i en klasse for sig selv. Dine ture bliver en afslappet fornøjelse, med plads omkring dig og du bestemmer selv din egen fest med musikken mens du kører. <br> Perfekt til når en studiekammerat får et lift eller du skal med kæresten ud i det blå.</p>
-              <p style="color:#d5ffff;text-align:left;">Er du fristet?</p>
+              <p style="color:#d5ffff;text-align:left;">Er du fristet?</p> 
+              <a class="btn-design" href="leasing.html">LEASE NU</a>
               
       </div>
       <div>
                 <img src="./images/Driving Slash Car.jpg" alt="bilen foran" class="center" height="400px">
       </div>
-    </div>
-          <div class="btn">
-            <a href="./leasing.html" class="btn-lease">lease nu</a>
-          </div>
-
-    </div>
     </header>
 
     <footer>
