--- a/koncept.html
+++ b/koncept.html
@@ -34,7 +34,8 @@
      </header>
     <section class="p_2_box">  
     <h1>
-        SLASH <br> /Bag Konceptet
+        SLASH <br> /Bag Konceptet <br><br><br>
+        <a class="btn-design" href="leasing.html">LEASE NU</a>
     </h1>
     <p>
       Vi tilbyder her en eksklusivt mulighed KUN for 
