updated Leasing + Style.CSS

--- a/leasing.html
+++ b/leasing.html
@@ -42,27 +42,40 @@
     <main class="main-leasing">
         <div class="leasing-container">
           <div class="leasing-img">
-            <img src="./images/car-reer.jpg" alt="" height="440px" width="200px">
+            <img src="./images/car-reer.jpg" alt="Rear of the Car" height="440px" width="200px">
           </div>
         </div>
         <div class="leasing-container">
           <div class="leasing-box">
-            <h3>SLASH Tilbud 1</h3>
-            <p>12 Måneders Leasing
-              <br> 10000kr. + 3000kr
-            </p>
+            <a href="index.html"><h3>SLASH Tilbud 1</h3>
+            <p>Lease En SLASH
+              <br><br><br><br><i>Pris:</i>
+              <br><b>1.995 kr.</b> mdl. ydelse
+              <br>i 24 måneder! <br><br><br>
+              </p>
+            <p class="leasing-big">
+              <b>Subtotal:
+              <br>67.880 kr.</b>
+              </p>
+            <p class="leasing-small">
+              <i>*Engangsydelse 20.000 kr.</i>
+              </p></a>
           </div>
           <div class="leasing-box">
-            <h3>TILBUD 2</h3>
-            <p>24 Måneders Leasing
-              <br> 10000kr. + 3000kr
-            </p>
+            <a href="index.html"><h3>SLASH Tilbud 2</h3>
+            <p>Lease En SLASH i
+              <br>12 Måneder!
+              <br>Engansydelse 20.000 kr.
+              <br>+ Mdl. Ydelse 2.095 kr.
+            </p></a>
           </div>
           <div class="leasing-box">
-            <h3>NORMALE TILBUD</h3>
-            <p>X Antal Måneders Leasing
-              <br> 10000kr. + 3000kr
-            </p>
+            <a href="index.html"><h3>NORMALE TILBUD</h3>
+            <p>Lease En SLASH i
+              <br>12 Måneder!
+              <br>Engansydelse 20.000 kr.
+              <br>+ Mdl. Ydelse 2.195 kr.
+            </p></a>
           </div>
         </div>
     </main>
