finished Leasing + Styling (No Break Point)

--- a/leasing.html
+++ b/leasing.html
@@ -49,9 +49,11 @@
           <div class="leasing-box">
             <a href="index.html"><h3>SLASH Tilbud 1</h3>
             <p>Lease En SLASH
-              <br><br><br><br><i>Pris:</i>
+              </p>
+            <p class="leasing-medium">
+              <i>Pris:</i>
               <br><b>1.995 kr.</b> mdl. ydelse
-              <br>i 24 måneder! <br><br><br>
+              <br>i 24 måneder!
               </p>
             <p class="leasing-big">
               <b>Subtotal:
@@ -63,19 +65,37 @@
           </div>
           <div class="leasing-box">
             <a href="index.html"><h3>SLASH Tilbud 2</h3>
-            <p>Lease En SLASH i
-              <br>12 Måneder!
-              <br>Engansydelse 20.000 kr.
-              <br>+ Mdl. Ydelse 2.095 kr.
-            </p></a>
+              <p>Lease En SLASH
+                </p>
+              <p class="leasing-medium">
+                <i>Pris:</i>
+                <br><b>2.095 kr.</b> mdl. ydelse
+                <br>i 12 måneder!
+                </p>
+              <p class="leasing-big">
+                <b>Subtotal:
+                <br>45.140 kr.</b>
+                </p>
+              <p class="leasing-small">
+                <i>*Engangsydelse 20.000 kr.</i>
+                </p></a>
           </div>
           <div class="leasing-box">
-            <a href="index.html"><h3>NORMALE TILBUD</h3>
-            <p>Lease En SLASH i
-              <br>12 Måneder!
-              <br>Engansydelse 20.000 kr.
-              <br>+ Mdl. Ydelse 2.195 kr.
-            </p></a>
+            <a href="index.html"><h3>SLASH Tilbud 3</h3>
+              <p>Lease En SLASH
+                </p>
+              <p class="leasing-medium">
+                <i>Pris:</i>
+                <br><b>2.195 kr.</b> mdl. ydelse
+                <br>i 6 måneder!
+                </p>
+              <p class="leasing-big">
+                <b>Subtotal:
+                <br>33.170 kr.</b>
+                </p>
+              <p class="leasing-small">
+                <i>*Engangsydelse 20.000 kr.</i>
+                </p></a>
           </div>
         </div>
     </main>
