--- a/design.html
+++ b/design.html
@@ -48,8 +48,8 @@
 
       <div >
               <p style="color:#d5ffff; text-align:left;">Oplev den fede fornemmelse af SLASH's indenvendige komfort. Med nem adgang til Apple Carplay samt dæmpede diodelys i instrumentbrættet, formes stemningen på turen mod din destination. <br>Siddekomfort i en klasse for sig selv. Dine ture bliver en afslappet fornøjelse, med plads omkring dig og du bestemmer selv din egen fest med musikken mens du kører. <br> Perfekt til når en studiekammerat får et lift eller du skal med kæresten ud i det blå.</p>
-              <p style="color:#d5ffff;text-align:left;">Er du fristet?</p> 
-              <a class="btn-design" href="leasing.html">LEASE NU</a>
+              <p style="color:#d5ffff;text-align:left;">Er du fristet?</p> <br>
+              <a class="index-btn-pre" href="leasing.html">LEASE NU</a>
               
       </div>
       <div>
