--- a/koncept.html
+++ b/koncept.html
@@ -34,12 +34,23 @@
      </header>
     <section class="p_2_box">  
     <h1>
-        SLASH <br> /Bag Konceptet <br><br><br>
-        <a class="btn-design" href="leasing.html">LEASE NU</a>
+        SLASH <br> /Bag Konceptet <br><br>
+                  <a class="index-btn-pre" href="leasing.html">LEASE NU</a>
     </h1>
     <p>
-      Vi tilbyder her en eksklusivt mulighed KUN for 
-      studerende indmeldt på en dansk uddannelse. <br><br>
+      Vi tilbyder her en eksklusiv mulighed KUN for 
+      studerende indmeldt på en dansk uddannelse. <font size=1><i>(SU-berettiget)</i> </font><br><br>
+
+      <font size=5>LEASE EN SLASH - luksusbilen for studerende.</font><br><br>
+
+      De fleste studerer i storbyer, hvor priser på boliger er markant højere end provins og landområder. 
+      Et enkelt værelse kan koste mange tusinde af kroner. Det medfører at studerende fra ydreområder, 
+      der ikke vil betale en skyhøj boligpris, må pendle - <i>ofte langt</i> - hver dag. <br><br>
+      SLASH vender op og ned på denne situation. Vi <i>skær'</i> toppen af prisen på leasing af din nye luksusbil.  
+      Du kan nu både billigere og federe  <font size=1><i>(bolig i yderområde)</i></font>
+      samtidig med at du cruiser til studiet i ren comfort. Differencen mellem boligpriserne, 
+      kan i mange tilfælde finansier din leasing-aftale <br><br>
+
       Med denne unikke løsning, kan du udleve drømmen 
       om at cruise gennem det danske landskab og bybillede 
       - i din luksusbil - allerede fra imorgen. <br><br>
