Ændret farve på tekst forside

--- a/design.html
+++ b/design.html
@@ -41,7 +41,7 @@
         </div>
 
       <div >
-              <h1 style="color:  #007db8 ; text-align:left;">DESIGN</h1>
+              <h1 style="color:  #00d9fa ; text-align:left;">DESIGN</h1>
               <p style="color:#d5ffff; text-align:left;">SLASH kommer tonet og lakeret i den flotte Silver Clouds farve. Hjulkapslerne er Jet Ink Black. Disse kombinationer af farver passer perfekt til cruisen på landevej og i by-billedet. </p>
               <p style="color:#d5ffff; text-align:left;"> Med din SLASH går du ud af døren og sætter dig ind med dit studiested som slut destination. Efter studiet oplever du igen den ultimative frihed i at selv bestemme din rute fra studiet, måske hen til en studiekammerat, arbejdet eller bare en ny rute hjem.Som din Iphone navigerer dig igennem via skærmen som den er tilsluttet. </p>
       </div>
