--- a/koncept.html
+++ b/koncept.html
@@ -46,10 +46,10 @@
       De fleste studerer i storbyer, hvor priser på boliger er markant højere end provins og landområder. 
       Et enkelt værelse kan koste mange tusinde af kroner. Det medfører at studerende fra ydreområder, 
       der ikke vil betale en skyhøj boligpris, må pendle - <i>ofte langt</i> - hver dag. <br><br>
-      SLASH vender op og ned på denne situation. Vi <i>skær'</i> toppen af prisen på leasing af din nye luksusbil.  
-      Du kan nu både billigere og federe  <font size=1><i>(bolig i yderområde)</i></font>
-      samtidig med at du cruiser til studiet i ren comfort. Differencen mellem boligpriserne, 
-      kan i mange tilfælde finansier din leasing-aftale <br><br>
+      SLASH vender op og ned på denne situation. Vi <i>skær'</i> toppen af prisen på leasing af din nye luksusbil.<br><br>  
+      Du kan nu både billigere og federe  <font size=1><i>(... fx større bolig i yderområde)</i></font>
+      samtidig med at du cruiser til studiet i <i>ren komfort</i>. Differencen mellem boligpriserne, 
+      kan i mange tilfælde, finansiere din leasing-aftale <br><br>
 
       Med denne unikke løsning, kan du udleve drømmen 
       om at cruise gennem det danske landskab og bybillede 
