--- a/koncept.html
+++ b/koncept.html
@@ -35,7 +35,7 @@
     <section class="p_2_box">  
     <h1>
         SLASH <br> /Bag Konceptet <br><br>
-                  <a class="index-btn-pre" href="leasing.html">LEASE NU</a>
+                  <a class="index-btn-pre btn-koncept" href="leasing.html">LEASE NU</a>
     </h1>
     <p>
       Vi tilbyder her en eksklusiv mulighed KUN for 
