--- a/design.html
+++ b/design.html
@@ -24,12 +24,13 @@
     <header>
       <div class="navbar">
         <div class="containers flex">
-          <img src="./images/logo2 white.png" class="logo" alt="S/Leasing">
+          <a href="index.html">
+            <img src="./images/logo2 white.png" class="logo" alt="S/Leasing" /></a>
           <nav>
             <ul>
               <li><a href="index.html">Forside</a></li>
               <li><a href="koncept.html">Koncept</a></li>
-              <li><a href="design.html">Design</a></li>
+              <li><a href="design.html"><u>Design</u></a></li>
               <li><a href="leasing.html">Leasing</a></li>
             </ul>
           </nav>
