--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <header>
       <div class="navbar">
         <div class="containers flex">
-          <img src="./images/logo2 white.png" class="logo" alt="" />
+          <a href="index.html">
+            <img src="./images/logo2 white.png" class="logo" alt="S/Leasing" /></a>
           <nav>
             <ul>
-              <li><a href="index.html">Forside</a></li>
+              <li><a href="index.html"><u>Forside</u></a></li>
               <li><a href="koncept.html">Koncept</a></li>
               <li><a href="design.html">Design</a></li>
               <li><a href="leasing.html">Leasing</a></li>
@@ -49,7 +50,7 @@
           Lease en luksusbil med Studierabat
         </h2>
 
-        <a href="#" class="index-btn-pre">LEASE NU</a>
+        <a href="leasing.html" class="index-btn-pre">LEASE NU</a>
        <!-- <a href="#" class="btn-test">TEST DRIVE</a> -->
       </div>    
     </header>
