--- a/leasing.html
+++ b/leasing.html
@@ -32,7 +32,7 @@
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="koncept.html">Koncept</a></li>
                 <li><a href="design.html">Design</a></li>
-                <li><a href="leasing.html">Leasing</a></li>
+                <li><a href="leasing.html"><u>Leasing</u></a></li>
               </ul>
             </nav>
           </div>
