--- a/koncept.html
+++ b/koncept.html
@@ -20,11 +20,12 @@
       <header>
         <div class="navbar">
           <div class="containers flex">
-            <img src="./images/logo2 white.png" class="logo" alt="" />
+            <a href="index.html">
+              <img src="./images/logo2 white.png" class="logo" alt="S/Leasing" /></a>
             <nav>
              <ul>
               <li><a href="index.html">Forside</a></li>
-              <li><a href="koncept.html">Koncept</a></li>
+              <li><a href="koncept.html"><u>Koncept</u></a></li>
               <li><a href="design.html">Design</a></li>
               <li><a href="leasing.html">Leasing</a></li>
             </ul>
