sidste rettelser og validator

--- a/design.html
+++ b/design.html
@@ -25,7 +25,7 @@
       <div class="navbar">
         <div class="containers flex">
           <a href="index.html">
-            <img src="./images/logo2 white.png" class="logo" alt="S/Leasing" /></a>
+            <img src="./images/logo2-white.png" class="logo" alt="S/Leasing" /></a>
           <nav>
             <ul>
               <li><a href="index.html">Forside</a></li>
@@ -38,23 +38,23 @@
       </div>
       <div class="grid-one">
         <div> 
-        <img src="./images/Bag-rattet-bil-fronten.png" alt="Bilen" class="center" height="400px">
+        <img src="./images/Bag-rattet-bil-fronten.png" alt="Bilen" class="center" height="400">
         </div>
-
-      <div >
+      <div>
               <h1 style="color:  #00d9fa ; text-align:left;">DESIGN</h1>
               <p style="color:#d5ffff; text-align:left;">SLASH kommer tonet og lakeret i den flotte Silver Clouds farve. Hjulkapslerne er Jet Ink Black. Disse kombinationer af farver passer perfekt til cruisen på landevej og i by-billedet. </p>
               <p style="color:#d5ffff; text-align:left;"> Med din SLASH går du ud af døren og sætter dig ind med dit studiested som slut destination. Efter studiet oplever du igen den ultimative frihed i at selv bestemme din rute fra studiet, måske hen til en studiekammerat, arbejdet eller bare en ny rute hjem.Som din Iphone navigerer dig igennem via skærmen som den er tilsluttet. </p>
-      </div>
+        </div>
 
       <div >
               <p style="color:#d5ffff; text-align:left;">Oplev den fede fornemmelse af SLASH's indenvendige komfort. Med nem adgang til Apple Carplay samt dæmpede diodelys i instrumentbrættet, formes stemningen på turen mod din destination. <br>Siddekomfort i en klasse for sig selv. Dine ture bliver en afslappet fornøjelse, med plads omkring dig og du bestemmer selv din egen fest med musikken mens du kører. <br> Perfekt til når en studiekammerat får et lift eller du skal med kæresten ud i det blå.</p>
               <p style="color:#d5ffff;text-align:left;">Er du fristet?</p> <br>
               <a class="index-btn-pre" href="leasing.html">LEASE NU</a>
               
-      </div>
+        </div>
       <div>
-                <img src="./images/Driving Slash Car.jpg" alt="bilen foran" class="center" height="400px">
+                <img src="./images/driving-slash-car.jpg" alt="bilen foran" class="center" height="400">
+        </div>
       </div>
     </header>
 
@@ -67,15 +67,15 @@
              <h3>Facebook</h3>
            </div>
            <div>
-           <a href="https://www.instagram.com/"target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
+           <a href="https://www.instagram.com/" target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
              <h3>Instagram</h3>
            </div>
            <div>
-           <a href="https://twitter.com/?lang=da"target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
+           <a href="https://twitter.com/?lang=da" target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
              <h3>Twitter</h3>
            </div>
            <div>
-           <a href="https://www.youtube.com/"target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
+           <a href="https://www.youtube.com/" target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
              <h3>Youtube</h3>
            </div>
         </div>
