--- a/leasing.html
+++ b/leasing.html
@@ -26,7 +26,7 @@
         <div class="navbar">
           <div class="containers flex">
             <a href="index.html">
-            <img src="./images/logo2 white.png" class="logo" alt="S/Leasing" /></a>
+            <img src="./images/logo2-white.png" class="logo" alt="S/Leasing" /></a>
             <nav>
               <ul>
                 <li><a href="index.html">Forside</a></li>
@@ -42,7 +42,7 @@
     <main class="main-leasing">
         <div class="leasing-container">
           <div class="leasing-img">
-            <img src="./images/car-reer.jpg" alt="Rear of the Car" height="440px" width="200px">
+            <img src="./images/car-reer.jpg" alt="Rear of the Car" height="440" width="200">
           </div>
         </div>
         <div class="leasing-container">
@@ -108,15 +108,15 @@
                <h3>Facebook</h3>
              </div>
              <div>
-             <a href="https://www.instagram.com/"target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
+             <a href="https://www.instagram.com/" target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
                <h3>Instagram</h3>
              </div>
              <div>
-             <a href="https://twitter.com/?lang=da"target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
+             <a href="https://twitter.com/?lang=da" target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
                <h3>Twitter</h3>
              </div>
              <div>
-             <a href="https://www.youtube.com/"target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
+             <a href="https://www.youtube.com/" target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
                <h3>Youtube</h3>
              </div>
           </div>
