--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="navbar">
         <div class="containers flex">
           <a href="index.html">
-            <img src="./images/logo2 white.png" class="logo" alt="S/Leasing" /></a>
+            <img src="./images/logo2-white.png" class="logo" alt="S/Leasing" /></a>
           <nav>
             <ul>
               <li><a href="index.html"><u>Forside</u></a></li>
@@ -63,15 +63,15 @@
             <h3>Facebook</h3>
           </div>
           <div>
-          <a href="https://www.instagram.com/"target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
             <h3>Instagram</h3>
           </div>
           <div>
-          <a href="https://twitter.com/?lang=da"target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
+          <a href="https://twitter.com/?lang=da" target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
             <h3>Twitter</h3>
           </div>
           <div>
-          <a href="https://www.youtube.com/"target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
             <h3>Youtube</h3>
           </div>
         </div>
