--- a/koncept.html
+++ b/koncept.html
@@ -21,7 +21,7 @@
         <div class="navbar">
           <div class="containers flex">
             <a href="index.html">
-              <img src="./images/logo2 white.png" class="logo" alt="S/Leasing" /></a>
+              <img src="./images/logo2-white.png" class="logo" alt="S/Leasing" /></a>
             <nav>
              <ul>
               <li><a href="index.html">Forside</a></li>
@@ -63,7 +63,7 @@
       En ting SLASH ikke går på kompromi med er lyd: Bilen er udstyret med Apple 
       Carplay, så du nemt kan tilkoble iPhonen og afspille DIN musik.
     </p>
-    <img src="./images/koncept_car.png" class="koncept_pic">
+    <img src="./images/koncept_car.png" alt="Koncept Car" class="koncept_pic">
     </section>
     <footer>
       <section class="services">
@@ -73,15 +73,15 @@
              <h3>Facebook</h3>
            </div>
            <div>
-           <a href="https://www.instagram.com/"target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
+           <a href="https://www.instagram.com/" target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
              <h3>Instagram</h3>
            </div>
            <div>
-           <a href="https://twitter.com/?lang=da"target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
+           <a href="https://twitter.com/?lang=da" target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
              <h3>Twitter</h3>
            </div>
            <div>
-           <a href="https://www.youtube.com/"target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
+           <a href="https://www.youtube.com/" target="_blank"> <i class="fab fa-youtube fa-3x"></i></a>
              <h3>Youtube</h3>
            </div>
         </div>
